--- a/wiki/ExampleTools.wiki
+++ b/wiki/ExampleTools.wiki
@@ -18,3 +18,7 @@ If you ever want to print something that is like a small booklet, but needs to b
 The print_two example program will, for example, make two side-by-side copies each page of of your PDF on a each output sheet.
 
 But, every other page is flipped, so that you can print double-sided and the pages will line up properly and be pre-collated.
+
+= use_reportlab.py =
+
+This script shows a simple example of reading in a PDF, and using the pdfrw/decodegraphics.py module to try to write the same information out to a new PDF through a reportlab canvas.  (If you know about reportlab, you know that if you can faithfully render a PDF to a reportlab canvas, you can do pretty much anything else with that PDF you want.)
