--- a/wiki/SourceFiles.wiki
+++ b/wiki/SourceFiles.wiki
@@ -1,20 +1,20 @@
 #summary pdfrw source files
 #labels Featured
 
-= Introduction =
+== Introduction ==
 
 The pdfrw library is currently a single Python package with 7 sub-modules.
 The [http://code.google.com/p/pdfrw/source/browse/trunk/pdfrw/__init__.py __init__.py] module does the usual thing of importing a few major attributes from some of the submodules.
 
-= Basic types and low-level parsing =
+== Basic types and low-level parsing ==
 
 [http://code.google.com/p/pdfrw/source/browse/trunk/pdfrw/pdfobjects.py pdfobjects.py] contains classes that map directly to PDF file constructs.  [http://code.google.com/p/pdfrw/source/browse/trunk/pdfrw/pdftokens.py pdftokens.py] builds on this to parse PDF syntactical tokens.
 
-= Reading and writing =
+== Reading and writing ==
 
 [http://code.google.com/p/pdfrw/source/browse/trunk/pdfrw/pdfreader.py pdfreader.py] contains the !PdfReader class, which will read and parse a PDF file.  Similarly, [http://code.google.com/p/pdfrw/source/browse/trunk/pdfrw/pdfwriter.py pdfwriter.py] contains the !PdfWriter class, which can create and output a PDF file.
 
-= Advanced features =
+== Advanced features ==
 
 [http://code.google.com/p/pdfrw/source/browse/trunk/pdfrw/pdfcompress.py pdfcompress.py] contains compression/decompression functions.
  
