Added metadata example.

--- a/wiki/ExampleTools.wiki
+++ b/wiki/ExampleTools.wiki
@@ -30,6 +30,12 @@ But that assumes several things, including that the personnel know how to operat
   Same example, using reportlab for PDF output.
     http://code.google.com/p/pdfrw/source/browse/trunk/examples/rl1/booklet.py
 
+== Adding metadata ==
+
+The metadata example will accept multiple input files on the command line, concatenate them and output them to output.pdf, after adding some nonsensical metadata to the output PDF file:
+
+  http://code.google.com/p/pdfrw/source/browse/trunk/examples/metadata.py
+
 == Rotating and doubling -- print_two ==
 
 If you ever want to print something that is like a small booklet, but needs to be spiral bound, you either have to do some fancy rearranging, or just waste half your paper.
