Edited wiki page through web user interface.

--- a/wiki/GuestBook.wiki
+++ b/wiki/GuestBook.wiki
@@ -3,6 +3,8 @@
 
 If you don't want to file an issue, please give any project feedback (good or bad) on this page.
 
+A short note about how you use pdfrw, what you like, what you don't like, and any features that would be nice to have would be great.
+
 Thanks!
 
 Patrick Maupin
